Updated to SourceSansPro font.

--- a/themes/phpdbadmin/core.css
+++ b/themes/phpdbadmin/core.css
@@ -4,6 +4,7 @@
 /****************************************************************************/
 /****************************************************************************/
 
+@import url("core/fonts.css");
 @import url("core/layout.css");
 @import url("core/content.css");
 @import url("core/workflow.css");
